--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ button {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  width: 85px;
+  height: 85px;
 }
 
 .result {
@@ -26,4 +28,9 @@ button {
   margin-bottom: 10px;
   padding-top: 5px;
   width: 60;
+}
+
+.table {
+  border-style: solid;
+  border-width: 5px;
 }
